erDiagram
    USERS ||--|| USER_QUOTAS : limited_by
    USERS ||--o{ STRATEGY_DRAFTS : authors
    USERS ||--o{ AGENT_RUNS : starts
    USERS ||--o{ SEARCH_RUNS : owns
    USERS ||--o{ EXPERIMENTS : owns

    STRATEGY_DRAFTS ||--o| STRATEGY_VERSIONS : approved_as
    STRATEGY_DRAFTS ||--o{ AGENT_RUNS : progresses_through
    AGENT_RUNS ||--o{ AGENT_ATTEMPTS : records
    AGENT_RUNS ||--o{ STRATEGY_ARTIFACTS : creates
    STRATEGY_ARTIFACTS ||--o{ SANDBOX_RUNS : tested_by
    SANDBOX_RUNS ||--o{ SANDBOX_REPORTS : emits
    STRATEGY_ARTIFACTS ||--o| STRATEGY_VERSIONS : approved_as
    STRATEGY_DEFINITIONS ||--o{ STRATEGY_VERSIONS : versions
    STRATEGY_VERSIONS ||--o{ STRATEGY_COMPONENTS : contains
    AI_MODEL_VERSIONS ||--o{ STRATEGY_DRAFTS : generated_with

    MARKET_PROVIDERS ||--o{ MARKET_PAIRS : provides
    MARKET_PAIRS ||--o{ CANDLES : has
    MARKET_PAIRS ||--o{ BBO_EVENTS : has
    MARKET_PAIRS ||--o{ STREAM_CHECKPOINTS : tracked_by

    MARKET_DATASETS ||--o{ MARKET_DATASET_CANDLES : freezes
    MARKET_DATASETS ||--o{ MARKET_DATASET_BBO : freezes
    CANDLES ||--o{ MARKET_DATASET_CANDLES : referenced_by
    BBO_EVENTS ||--o{ MARKET_DATASET_BBO : referenced_by

    SEARCH_RUNS ||--o{ SEARCH_CANDIDATES : generates
    SEARCH_RUNS ||--o{ SEARCH_ACTIONS : controlled_by
    SEARCH_CANDIDATES ||--o| EXPERIMENTS : becomes

    STRATEGY_VERSIONS ||--o{ EXPERIMENTS : selected_by
    MARKET_DATASETS ||--o{ EXPERIMENTS : runs_on
    EXECUTION_POLICIES ||--o{ EXPERIMENTS : executes_with
    SENTIMENT_SNAPSHOTS ||--o{ EXPERIMENTS : optional_input

    EXPERIMENTS ||--|| BACKTEST_JOBS : queued_as
    EXPERIMENTS ||--|| BACKTEST_RUNS : executes
    BACKTEST_RUNS ||--o{ SIGNAL_RECORDS : records
    BACKTEST_RUNS ||--o{ TRADES : produces
    BACKTEST_RUNS ||--o{ EQUITY_POINTS : records
    BACKTEST_RUNS ||--|| EVALUATIONS : measured_by
    EVALUATIONS ||--o{ LEADERBOARD_ENTRIES : ranked_as
    SCORE_POLICIES ||--o{ LEADERBOARD_ENTRIES : scored_by

    NEWS_SOURCES ||--o{ NEWS_DOCUMENTS : provides
    NEWS_DOCUMENTS ||--o{ NEWS_TAGS : tagged_as
    AI_MODEL_VERSIONS ||--o{ NEWS_TAGS : generated_with
    NEWS_DOCUMENTS ||--o{ SENTIMENT_RESULTS : classified_as
    AI_MODEL_VERSIONS ||--o{ SENTIMENT_RESULTS : generated_with
    SENTIMENT_RESULTS ||--o{ SENTIMENT_SNAPSHOTS : frozen_into

    DOMAIN_EVENTS ||--o{ EVENT_CONSUMPTIONS : consumed_by
    DOMAIN_EVENTS ||--o| DEAD_LETTER_EVENTS : may_become
